--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/NavBar.astro";
+import Footer from "../components/Footer.astro";
 
 const { title } = Astro.props;
 
@@ -15,7 +16,10 @@ import "../base.css"
     <title>{title}</title>
 </head>
 <body class="font-inter bg-darkGrey text-white">
+    <div class="min-h-screen">
     <NavBar></NavBar>
     <slot />
+</div>
+    <Footer></Footer>
 </body>
 </html>
