--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -15,7 +15,10 @@ const { post } = Astro.props;
 ---
 
 <MainLayout title={post.title}>
-    <img src={getSanityImage(post.mainImage).url()} alt="">
+  <div class="container mx-auto">
+    <img class="w-full h-[50vh] object-cover" src={getSanityImage(post.mainImage).url()} alt="">
+    <p>{post.publishedAt}</p>
     <h1 class="font-inter font-bold text-3xl">{post.title}</h1>
     <PortableText portableText={post.body} />
+  </div>
 </MainLayout>
