--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const posts = await getAllPosts();
         <ul class="flex justify-center m-4 text-white">
           {
             posts.map((post) => (
-              <li class="flex flex-col w-60 border-2 rounded-lg hover:border-finePink transition-all ease-in-out">
+              <li class="flex flex-col w-96 border-2 rounded-lg hover:border-finePink transition-all ease-in-out m-5">
                 <a class="m-5" href={`/posts/${post.slug.current}`}>
                   <img class="mb-4 rounded-lg" src={getSanityImage(post.mainImage).url()} alt="" />
                   {post.title}
