--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const posts = await getAllPosts();
         <h1
           class="mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl text-brightBlue"
         >
-          Resarching for the future
+          Researching for the future
         </h1>
         <p
           class="mb-8 text-lg font-normal lg:text-xl sm:px-16 xl:px-48 text-white"
