made cta section

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,7 +4,7 @@
 <nav>
     <div class="flex justify-center text-md text-white">
         <a class="p-6 hover:underline hover:text-whiteYellow transition-all ease-in-out" href="/">Home</a>
-        <a class="p-6 hover:underline hover:text-whiteYellow transition-all ease-in-out" href="/">Blog</a>
+        <a class="p-6 hover:underline hover:text-whiteYellow transition-all ease-in-out" href="/posts">Blog</a>
         <a class="p-6 hover:underline hover:text-whiteYellow transition-all ease-in-out" href="/">About Us</a>
     </div>
 </nav>
