--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -12,13 +12,15 @@ export async function getStaticPaths() {
 }
 
 const { post } = Astro.props;
+
+import "./slug.css"
 ---
 
 <MainLayout title={post.title}>
-  <div class="container mx-auto">
-    <img class="w-full h-[50vh] object-cover" src={getSanityImage(post.mainImage).url()} alt="">
+  <div class="blog-page container mx-auto p-4">
     <p>{post.publishedAt}</p>
-    <h1 class="font-inter font-bold text-3xl">{post.title}</h1>
+    <h1 class="font-inter font-bold text-4xl py-3">{post.title}</h1>
+    <img class="w-full max-h-[50vh] object-cover py-3" src={getSanityImage(post.mainImage).url()} alt="">
     <PortableText portableText={post.body} />
   </div>
 </MainLayout>
