--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -18,7 +18,7 @@ import "./slug.css"
 
 <MainLayout title={post.title}>
   <div class="blog-page container mx-auto p-4">
-    <p>{post.publishedAt}</p>
+    <p>Updated at: {new Date (post._updatedAt).toLocaleDateString()}</p>
     <h1 class="font-inter font-bold text-4xl py-3">{post.title}</h1>
     <img class="w-full max-h-[50vh] object-cover py-3" src={getSanityImage(post.mainImage).url()} alt="">
     <PortableText portableText={post.body} />
